fix(results): enforce specimen and specialty write ownership (A-01 B-02 C-02 C-03)